--- a/base/styles.css
+++ b/base/styles.css
@@ -49,4 +49,20 @@ form .input-block input {
     margin-top: 8px;
     padding: 7px;
     font-size: 16px;
+    color: #7159c1;
+    border: 1px solid #ccddef;
+    outline-color: #7159c1;
+}
+
+form .btn-login {
+
+    display: block;
+    min-width: 120px;
+    border: none;
+    background-color: #7159c1;
+    color: #fff;
+    border-radius: 25px;
+    padding: 7px;
+    margin: auto;
+
 }
